[package]
name = "milkv-led"
version = "0.1.0"
edition = "2024"

[dependencies]
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
jpeg-decoder = { version = "0.3.2", default-features = false }
jpeg-encoder = { version = "0.7.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
wit-bindgen = "0.53.1"
